--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* { 
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   display: flex;
@@ -7,7 +11,7 @@
   align-items: center;
   justify-content: flex-start;
   background-color: #282c34;
-  color: white;
+  color: white;  
 }
 
 .App-logo {
