--- a/src/components/Testing/Testing.css
+++ b/src/components/Testing/Testing.css
@@ -21,7 +21,10 @@
   display: block;
   padding: 15px;
 }
-
+.input {
+  width: 250px;
+  font-size: 17px;
+}
 .answer { 
   color: rgba(255, 255, 255, 0);
   transition: 0.05s all;
@@ -30,4 +33,43 @@
 
 .answer--show {  
   color: rgba(255, 255, 255, 0.4);
+}
+
+.statistic { 
+  width: 100%;
+  background-color: #1d2025;
+  border-bottom: 1px solid #363b44;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  font-size: 12px;
+  color: #ebebeb;
+  padding: 5px; 
+  position: fixed;
+  z-index: 1;
+
+}
+.statistic__item { padding: 5px;}
+.statistic__item-input {
+  width: 30px;
+  height: 25px;
+  padding: 0;
+}
+
+.statistic-details {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  font-size: 10px;
+}
+.details__wrap {
+  display: flex;
+  flex-flow: column;
+  width: 16px;
+  height: 30px;
+  padding: 1px;
+  text-align: right;
+}
+.details__item { 
+  border: 1px solid rgb(85, 83, 83);
 }
